--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="putri.css">
     <link rel="script Javascript" type="text/javascript" href="script.js">
-    <title>P05 jquery FadeOut when Delete tugas nya Putri</title>
+    <title>P03 Tabel Jquery tugas nya Putri</title>
 </head>
 <body>
     <h1 align="center">10 KAWAN DI IKMI</h1>
